--- a/debian/control
+++ b/debian/control
@@ -11,7 +11,7 @@ Vcs-Browser: http://dev.opennet-initiative.de/browser/on_mitgliedsantrag
 Package: on-mitgliedsantrag
 Architecture: all
 Depends: pdftk, libphp-phpmailer, ${misc:Depends}
-Suggests: apache2
+Suggests: apache2, php
 Description: Mitgliedsantrag für die Opennet Initiative.
  Angehende Mitglieder müssen dieses Online Formular ausfüllen,
  um Mitglied zu werden.
